Bug 1477603 - Part 2: Implement collapsed style. r=ladybenko
Differential Revision: https://phabricator.services.mozilla.com/D4044

Depends on D4043

UltraBlame original commit: 2c02f9db4ec9593c58595b53c6a4e5bd57743aef

--- a/devtools/client/aboutdebugging-new/src/components/debugtarget/DebugTargetList.css
+++ b/devtools/client/aboutdebugging-new/src/components/debugtarget/DebugTargetList.css
@@ -72,3 +72,18 @@ start
 60px
 ;
 }
+.
+debug
+-
+target
+-
+list
+-
+-
+collapsed
+{
+display
+:
+none
+;
+}
