--- a/devtools/client/aboutdebugging-new/src/components/debugtarget/DebugTargetPane.css
+++ b/devtools/client/aboutdebugging-new/src/components/debugtarget/DebugTargetPane.css
@@ -239,3 +239,25 @@ color
 )
 ;
 }
+.
+debug
+-
+target
+-
+pane__title
+-
+-
+collapsed
+:
+:
+before
+{
+transform
+:
+rotate
+(
+-
+90deg
+)
+;
+}
